--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,10 +1,7 @@
 {
-    "projectName": "myapp",
-    "projectPath": "/Users/schastep/myapp",
-    "defaultEditor": "code",
-    "frontendHandler": {
-        "javascript": "/usr/local/lib/node_modules/@aws-amplify/cli/node_modules/amplify-frontend-javascript"
-    },
+    "projectName": "amplify-vue",
+    "version": "2.0",
+    "frontend": "javascript",
     "javascript": {
         "framework": "vue",
         "config": {
@@ -14,7 +11,7 @@
             "StartCommand": "npm run-script serve"
         }
     },
-    "providers": {
-        "awscloudformation": "/usr/local/lib/node_modules/@aws-amplify/cli/node_modules/amplify-provider-awscloudformation"
-    }
+    "providers": [
+        "awscloudformation"
+    ]
 }
